Updated API URL in frontend .env file

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_PRODUCT_API=http://localhost:8000/api/v1
+# REACT_APP_PRODUCT_API=http://localhost:8000/api/v1
+REACT_APP_PRODUCT_API=https://cloathing.onrender.com/api/v1
