--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,4 @@
-PORT=8000
+PORT=8001
 NODE_ENV=PRODUCTION
-DB_URL=mongodb://localhost:27017/e-comm
+DB_URL=mongodb+srv://akileshanand21:iEbhJjzjso1dM6MT@firstcluster.jx70jdb.mongodb.net/?retryWrites=true&w=majority&appName=FirstCluster
+
